--- a/views/index.html
+++ b/views/index.html
@@ -15,11 +15,10 @@
                 <div class="logotipo" alt = "logo" width="100px"></div> 
                     <ul class="menu">
                         <li><a href="company.html">COMPANY</a></li>
-                        <li><a href="products.html">PRODUCTS</a></li>
+                        <li><a href="Products/linetime.html">PRODUCTS</a></li>
                         <li><a href="press_release.html">PRESS RELEASE</a></li>
                         <li><a href="recruity.html">RECRUITY</a></li>
                         <li><a href="support.html">SUPPORT</a></li>
-    
                     </ul>
             </nav>
         </header>
