--- a/views/Products/linetime.html
+++ b/views/Products/linetime.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../assets/css/styles.css">
+  <link rel="stylesheet" href="../../assets/css/styles.css">
   <script src="https://kit.fontawesome.com/2132230c71.js" crossorigin="anonymous"></script>
   <title>Products | Next Gen Gaming</title>
 </head>
@@ -12,25 +12,25 @@
 <body>
   <div class="cont-products">
     <header class="header-products">
-      <a href="index.html"><img src="../img/logo-ngg-removebg-preview.png" alt="" width="150px"></a>
+      <a href="../index.html"><img src="../../img/logo-ngg-removebg-preview.png" alt="" width="150px"></a>
     </header>
     <div class="header-sub">
       <h1>PRODUCTS</h1>
     </div>
-    <div class="contents-nav">
+    <nav class="contents-nav">
       <ul>
-        <li>All (Chronological)</li>
-        <li>Plataform</li>
+        <li><a href="linetime.html">All (Chronological)</a></li>
+        <li><a href="platform.html">Plataforms</a></li>
         <li>Sountrack</li>
         <li>Mobile Apps</li>
       </ul>
-    </div>
+    </nav>
     <div class="rightbox">
       <div class="rb-container">
         <ul class="rb">
           <li class="rb-item" ng-repeat="itembx">
             <div class="cont-card" onclick="window.location = 'Games/GOW.html'">
-              <img src="../img/GodOfWar/fondo.png" alt="">
+              <img src="../../img/GodOfWar/fondo.png" alt="">
               <div class="rb-title">God Of War: Ragnarok</div>
             </div>
             <div class="cont-span-platform">
@@ -41,7 +41,7 @@
           </li>
           <li class="rb-item" ng-repeat="itembx">
             <div class="cont-card" onclick="window.location='Games/Zelda.html'">
-              <img src="../img/Zelda/fondo.png" alt="">
+              <img src="../../img/Zelda/fondo.png" alt="">
               <div class="rb-title">The Legend Of Zelda: Tears Of The Kingdom</div>
             </div>
             <div class="cont-span-platform">
@@ -51,7 +51,7 @@
           </li>
           <li class="rb-item" ng-repeat="itembx">
             <div class="cont-card" onclick="window.location='Games/EldenRing.html'">
-              <img src="../img/EldenRing/fondo.png" alt="">
+              <img src="../../img/EldenRing/fondo.png" alt="">
               <div class="rb-title">Elden Ring Shadow Of The Erdtree Edition</div>
             </div>
             <div class="cont-span-platform">
@@ -64,7 +64,7 @@
           </li>
           <li class="rb-item" ng-repeat="itembx">
             <div class="cont-card" onclick="window.location='Games/Horizon.html'">
-              <img src="../img/Horizon/fondo.png" alt="">
+              <img src="../../img/Horizon/fondo.png" alt="">
               <div class="rb-title">Horizon</div>
             </div>
             <div class="cont-span-platform">
@@ -76,7 +76,7 @@
           </li>
           <li class="rb-item" ng-repeat="itembx">
             <div class="cont-card" onclick="window.location='Games/NFS.html'">
-              <img src="../img/nfs/fondo.png" alt="">
+              <img src="../../img/nfs/fondo.png" alt="">
               <div class="rb-title">Need For Speed Heat</div>
             </div>
             <div class="cont-span-platform">
@@ -88,7 +88,7 @@
           </li>
           <li class="rb-item" ng-repeat="itembx">
             <div class="cont-card" onclick="window.location = 'Games/DarkSouls.html'">
-              <img src="../img/DarkSouls/fondo.png" alt="">
+              <img src="../../img/DarkSouls/fondo.png" alt="">
               <div class="rb-title">Dark Souls Remaster</div>
             </div>
             <div class="cont-span-platform">
